# cdcl-sat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cdcl/: __init__.py  __main__.py  dimacs.py  generate.py  proof.py  solver.py
tests/: test_against_brute_force.py  test_drat.py  test_proof.py
