[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cdcl-sat"
version = "1.0.0"
description = "A CDCL SAT solver whose UNSAT answers come with a machine-checkable proof -- and the checker too"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wasserpuncher" }]
keywords = ["sat", "sat-solver", "cdcl", "drup", "proof", "dimacs", "from-scratch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Wasserpuncher/cdcl-sat"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["cdcl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
